@@ -82,6 +82,8 @@ module Spec
       class HelperBehaviour < Spec::DSL::Behaviour
         def before_eval #:nodoc:
           inherit Spec::Rails::DSL::HelperEvalContext
+          prepend_before {setup}
+          append_after {teardown}
           include described_type if described_type
         end
       end
