@@ -168,6 +168,8 @@ module Spec
         end
         def before_eval # :nodoc:
           inherit Spec::Rails::DSL::ViewEvalContext
+          prepend_before {setup}
+          append_after {teardown}
           configure
         end
       end
